--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,16 @@
 {
-  "name": "DictaMed – Dictée médicale intelligente",
+  "name": "DictaMed – Convertisseur de dictée médicale SPSS",
   "short_name": "DictaMed",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2563eb",
   "icons": [
-    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
-  ]
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any maskable" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any maskable" }
+  ],
+  "orientation": "portrait-primary",
+  "categories": ["medical", "productivity"],
+  "lang": "fr-FR",
+  "description": "Transformez votre voix en données SPSS en quelques clics avec notre solution de dictée médicale intelligente"
 }
